--- a/index.html
+++ b/index.html
@@ -39,14 +39,23 @@
     </div>
   </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="twelve columns">
-          <h4>Basic Page</h4>
-          <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="twelve columns">
+        <h4>Basic Page</h4>
+        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
       </div>
     </div>
+  </div>
+<!-- 
+  <footer>
+    <div class="container">
+      <div class="vertical-align">
+        <p>A microsite by CompSAt<br>
+        Jazmines.</p>
+      </div>
+    </div>
+  </footer> -->
 
 
 <!-- End Document
